# Genie-TTS

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml  main.yml
Tutorial/English/: How to Do TTS Inference.py
huggingface-space/: DEPLOYMENT.md  Dockerfile  README.md  app.py  convert_model.py  requirements.txt
huggingface-space/models/liang/: config.json
huggingface-space/models/liang/reference/: .gitkeep
plans/: gsv-tts-proxy-plan.md  huggingface-space-deployment-plan.md  tts-accelerator-plan.md
runtime/: CMakeLists.txt
runtime/src/: T2SOnnxCPURuntime.cpp  main.cpp
src/genie_tts/: ModelManager.py  PredefinedCharacter.py  __init__.py  _internal.py
src/genie_tts/Converter/: Converter.py
src/genie_tts/Converter/v2/: Converter.py
src/genie_tts/Converter/v2ProPlus/: Converter.py
src/genie_tts/Core/: Resources.py  __init__.py
src/genie_tts/G2P/Chinese/: ChineseG2P.py  ToneSandhi.py
src/genie_tts/G2P/Japanese/: JapaneseG2P.py
test/: TestAll.py  TestChara.py  Tmp.py
tts-accelerator/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
tts-accelerator/app/: __init__.py  config.py  main.py
tts-accelerator/app/models/: __init__.py  schemas.py
tts-accelerator/app/routers/: chat.py  speech.py
tts-accelerator/app/services/: __init__.py  proxy_client.py  tts_balancer.py  tts_cache.py
